feat: integrate to databse & create API read

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-PORT = 4000
+# Database
+PG_HOST = 'ep-misty-leaf-a1itdujk-pooler.ap-southeast-1.aws.neon.tech'
+PG_USER = 'neondb_owner'
+PG_DATABASE = 'neondb'
+PG_PASSWORD = 'npg_WmnG27XwDQxA'
+PG_PORT = 5432
+
+# Appplication Port
+APP_PORT = 8080
